--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             <div class="card">
                 <div class="card-header">
-                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseDate">Choose a date</a>
+                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseDate">Choose an appointment time</a>
                 </div>
                 <div id="collapseDate" class="collapse" data-parent="#accordion">
                     <div class="card-body">
